Disable requests to .md files

--- a/.htaccess
+++ b/.htaccess
@@ -30,7 +30,7 @@ AddDefaultCharset utf-8
 
 
 # Restrict access
-<FilesMatch "(^\.|\.json$)">
+<FilesMatch "(^\.|\.(json|md)$)">
     order deny,allow
     deny from all
 </FilesMatch>
